# api

./: .lefthook.yml  AGENTS.md  LICENSE  LICENSE-MIT  README.md  Taskfile.yml  buf.yaml  cog.toml
rust/: .gitignore  Cargo.toml  deny.toml
rust/.cargo/: audit.toml  config.toml.example
rust/pistachio-api-common/: Cargo.toml  README.md
rust/pistachio-api-common/src/: credentials.rs  error.rs  lib.rs  pagination.rs  search.rs
rust/pistachio-api-common/src/admin/: api_key.rs  app.rs  auth_provider.rs  client.rs  mfa.rs  mod.rs  project.rs  service_account.rs  tenant.rs  token.rs  usage.rs  user.rs
rust/pistachio-grpc-client/: Cargo.toml  README.md
rust/pistachio-grpc-client/src/: lib.rs
rust/pistachio-grpc-client/src/admin/: api_key.rs  client.rs  create_app.rs  create_project.rs  create_project_user.rs  create_tenant.rs  create_tenant_user.rs  delete_app.rs  delete_project.rs  delete_project_auth_provider.rs  delete_project_user.rs  delete_tenant.rs  delete_tenant_auth_provider.rs  delete_tenant_user.rs  get_admin_sdk_config.rs  get_app.rs  get_app_config.rs  get_effective_tenant_auth_providers.rs  get_project.rs  get_project_auth_provider.rs  get_project_user.rs  get_tenant.rs  get_tenant_user.rs  import_project_users.rs  import_tenant_users.rs  list_apps.rs  list_project_auth_providers.rs  list_project_users.rs  list_projects.rs  list_tenant_auth_providers.rs  list_tenant_users.rs  list_tenants.rs  mfa.rs  mod.rs  search_apps.rs  search_project_users.rs  search_projects.rs  search_tenant_users.rs  search_tenants.rs  service_account.rs  (+11 more)
rust/pistachio-grpc-client/src/types/: conversion.rs  grpc_error.rs  mod.rs
rust/pistachio-openapi-client/: Cargo.toml  README.md  build.rs
rust/pistachio-openapi-client/src/: lib.rs  problem_details.rs
rust/pistachio-openapi-client/src/admin/: api_key.rs  client.rs  create_app.rs  create_project.rs  create_project_user.rs  create_tenant.rs  create_tenant_user.rs  delete_app.rs  delete_project.rs  delete_project_auth_provider.rs  delete_project_user.rs  delete_tenant.rs  delete_tenant_auth_provider.rs  delete_tenant_user.rs  get_admin_sdk_config.rs  get_app.rs  get_app_config.rs  get_effective_tenant_auth_providers.rs  get_project.rs  get_project_auth_provider.rs  get_project_user.rs  get_tenant.rs  get_tenant_user.rs  import_project_users.rs  import_tenant_users.rs  list_apps.rs  list_project_auth_providers.rs  list_project_users.rs  list_projects.rs  list_tenant_auth_providers.rs  list_tenant_users.rs  list_tenants.rs  mfa.rs  mod.rs  search_apps.rs  search_project_users.rs  search_projects.rs  search_tenant_users.rs  search_tenants.rs  service_account.rs  (+11 more)
rust/pistachio-openapi-client/src/generated_admin/apis/: api_keys_api.rs  apps_api.rs  auth_providers_api.rs  configuration.rs  mfa_api.rs  mod.rs  projects_api.rs  service_accounts_api.rs  tenants_api.rs  tokens_api.rs  usage_api.rs  users_api.rs
rust/pistachio-openapi-client/src/generated_admin/models/: create_api_key_201_response.rs  create_api_key_201_response_api_key.rs  create_api_key_request.rs  create_app_200_response.rs  create_app_request.rs  create_custom_token_200_response.rs  create_custom_token_request.rs  create_project_200_response.rs  create_project_200_response_project.rs  create_project_200_response_project_resources.rs  create_project_201_response.rs  create_project_400_response.rs  create_project_request.rs  create_project_user_201_response.rs  create_project_user_201_response_user.rs  create_project_user_request.rs  create_service_account_201_response.rs  create_service_account_request.rs  create_session_cookie_200_response.rs  create_session_cookie_request.rs  create_tenant_200_response.rs  create_tenant_201_response.rs  create_tenant_request.rs  delete_app_200_response.rs  delete_project_200_response.rs  disable_service_account_key_200_response.rs  enable_service_account_key_200_response.rs  generate_service_account_key_201_response.rs  get_app_200_response.rs  (+123 more)
rust/pistachio-openapi-client/src/types/: auth_provider.rs  conversion.rs  mod.rs  user.rs
(+68 files in other folders)
