[workspace]
resolver = "3"
members = [
  "pistachio-api-common",
  "pistachio-grpc-client",
  "pistachio-openapi-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PistachioHQ/api"

[workspace.dependencies]
pistachio-api = { path = "../gen/rust" }
pistachio-api-common = { path = "pistachio-api-common" }

async-trait = "0.1"
thiserror = "2"
tracing = "0.1"

# gRPC stack
tonic = "0.14"
