[package]
name = "pistachio-api-common"
description = "Common types for Pistachio API clients"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
single-threaded = []

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
