[package]
name = "pistachio-api-common"
description = "Common types for Pistachio API clients"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[features]
single-threaded = []

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
libgn = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
