[package]
name = "pistachio-grpc-client"
description = "gRPC client for Pistachio API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
single-threaded = ["pistachio-api-common/single-threaded"]

[dependencies]
pistachio-api = { workspace = true }
pistachio-api-common = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tonic = "0.14"
