[package]
name = "pistachio-grpc-client"
description = "gRPC client for Pistachio API"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[features]
single-threaded = ["pistachio-api-common/single-threaded"]

[dependencies]
pistachio-api = { workspace = true }
pistachio-api-common = { workspace = true }
libgn = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tonic = "0.14"
tonic-types = "0.14"

# Transitive dependency minimum versions
# These are not used directly but constrain the resolver to compatible versions
anyhow = "1.0.14"
http = "1.1"
log = "0.4.6"
tracing-core = "0.1.28"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
